# libeasyyaml

./: .gitignore  .travis.yml  Makefile.am  README.md  conanfile.py  configure.ac
examples/: .gitignore  Makefile  ey_hello_tiny.c  ey_hello_universe.c  ey_hello_universe.yml  ey_hello_world.c  ey_hello_world.yml
src/: Makefile.am  easyyaml.c  easyyaml.h  exports.sym
test/: .gitignore  Makefile.am  check_easyyaml.c  check_hello_tiny.yml  check_hello_universe.yml  check_hello_world.yml  easyyaml_check.c  easyyaml_check.h
